--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -83,6 +83,26 @@
                 android:visibility="gone">
 
                 <TextView
+                    android:id="@+id/points"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/tv_points_label"
+                    android:textColor="@color/hint_text_color"
+                    android:textSize="@dimen/points_text_size"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/score"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/tv_score_label"
+                    android:textColor="@color/hint_text_color"
+                    android:textSize="@dimen/points_text_size"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
                     android:id="@+id/text_question"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/tv_question_height"
@@ -95,7 +115,8 @@
                     android:visibility="gone"
                     app:layout_constraintBottom_toTopOf="@id/progress"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent" />
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/score" />
 
                 <ImageView
                     android:id="@+id/image_question"
@@ -108,6 +129,7 @@
                     app:layout_constraintBottom_toTopOf="@id/progress"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/score"
                     tools:src="@tools:sample/avatars" />
 
                 <ProgressBar
