--- a/app/src/main/res/values-h690dp/dimens.xml
+++ b/app/src/main/res/values-h690dp/dimens.xml
@@ -21,10 +21,12 @@
 
     <dimen name="load_text_pudding">10dp</dimen>
 
-    <dimen name="tv_question_height">250dp</dimen>
+    <dimen name="points_text_size">14sp</dimen>
+
+    <dimen name="tv_question_height">240dp</dimen>
     <dimen name="tv_question_margin_top">15dp</dimen>
     <dimen name="tv_question_margin_bottom">22dp</dimen>
-    <dimen name="tv_question_pudding">15dp</dimen>
+    <dimen name="tv_question_pudding">20dp</dimen>
 
     <dimen name="question_image_top_margin">15dp</dimen>
     <dimen name="question_image_bottom_margin">22dp</dimen>
