--- a/app/src/main/res/values-h780dp/dimens.xml
+++ b/app/src/main/res/values-h780dp/dimens.xml
@@ -21,10 +21,12 @@
 
     <dimen name="load_text_pudding">10dp</dimen>
 
-    <dimen name="tv_question_height">280dp</dimen>
+    <dimen name="points_text_size">15sp</dimen>
+
+    <dimen name="tv_question_height">270dp</dimen>
     <dimen name="tv_question_margin_top">15dp</dimen>
     <dimen name="tv_question_margin_bottom">24dp</dimen>
-    <dimen name="tv_question_pudding">15dp</dimen>
+    <dimen name="tv_question_pudding">20dp</dimen>
 
     <dimen name="question_image_top_margin">15dp</dimen>
     <dimen name="question_image_bottom_margin">24dp</dimen>
