--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,7 +6,7 @@
     <dimen name="card_corner_radius">20dp</dimen>
     <dimen name="inner_layout_margin">15dp</dimen>
 
-    <dimen name="brand_margin_bottom">15dp</dimen>
+    <dimen name="brand_margin_bottom">13dp</dimen>
     <dimen name="brand_text_size">22sp</dimen>
     <dimen name="brand_image_padding_horizontal">20dp</dimen>
 
@@ -21,10 +21,12 @@
 
     <dimen name="load_text_pudding">10dp</dimen>
 
-    <dimen name="tv_question_height">220dp</dimen>
+    <dimen name="points_text_size">13sp</dimen>
+
+    <dimen name="tv_question_height">210dp</dimen>
     <dimen name="tv_question_margin_top">15dp</dimen>
     <dimen name="tv_question_margin_bottom">20dp</dimen>
-    <dimen name="tv_question_pudding">15dp</dimen>
+    <dimen name="tv_question_pudding">20dp</dimen>
 
     <dimen name="question_image_top_margin">15dp</dimen>
     <dimen name="question_image_bottom_margin">20dp</dimen>
